--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -30,6 +30,7 @@ configurations {
 dependencies {
     forge "net.minecraftforge:forge:${rootProject.forge_version}"
     // Remove the next line if you don't want to depend on the API
+    //modImplementation include("fuzs.extensibleenums:extensibleenums-forge:4.0.0")
     modApi "dev.architectury:architectury-forge:${rootProject.architectury_version}"
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
